--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="/media/css/ie7.css" />
 	<![endif]-->
 
-	<script type="text/javascript">  
-      function draw(){  
-        var canvas = document.getElementById('tutorial');  
-        if (canvas.getContext){  
-          var ctx = canvas.getContext('2d');  
-        }
-      }  
-    </script>
+	<script type="text/javascript">    </script>
 </head>
 
 <body>
