don't know what I changed, added processing.js though, so that's good

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- container -->
 <div id="container">
 
-<canvas id="tutorial">
+<canvas id="tutorial" width="150" height="150">
 	<p>your browser does not support canvas</p>
 </canvas>
 
