--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 
-	<title>canvas experiments</title>
-	<!--<link rel="SHORTCUT ICON" href="images/favicon.png" />-->
-	
-	<link rel="stylesheet" type="text/css" href="css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <title>canvas experiments</title>
+  <!--<link rel="SHORTCUT ICON" href="images/favicon.png" />-->
+  
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-	<script src="js/lib/jquery.js" type="text/javascript"></script>
-	<!--<script src="js/lib/swfobject.js" type="text/javascript"></script>-->
-	<script src="js/canvas.js" type="text/javascript"></script>
+  <script src="js/lib/jquery.js" type="text/javascript"></script>
+  <!--<script src="js/lib/swfobject.js" type="text/javascript"></script>-->
+  <script src="js/canvas.js" type="text/javascript"></script>
 
-	<!--[if lte IE 7]>
-	<link rel="stylesheet" type="text/css" href="/media/css/ie7.css" />
-	<![endif]-->
+  <!--[if lte IE 7]>
+  <link rel="stylesheet" type="text/css" href="/media/css/ie7.css" />
+  <![endif]-->
 
-	<script type="text/javascript">    </script>
+  <script type="text/javascript">    </script>
 </head>
 
 <body>
